Actualización resumenes HF

--- a/TEXTO/NewsClassification.ipynb
+++ b/TEXTO/NewsClassification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR ABRIENDO EL FICHERO\n",
-      "ERROR ABRIENDO EL FICHERO\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path_, filename_, category_, article_or_summary_,content_ = [],[],[],[],[]\n",
     "for dirname, _, filenames in os.walk('data/'):\n",
@@ -57,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +82,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2224</th>\n",
-       "      <td>data/BBC News Summary/Summaries/business/001.txt</td>\n",
+       "      <td>data/Summaries/business/001.txt</td>\n",
        "      <td>001.txt</td>\n",
        "      <td>business</td>\n",
        "      <td>Summaries</td>\n",
@@ -99,7 +90,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2225</th>\n",
-       "      <td>data/BBC News Summary/Summaries/business/002.txt</td>\n",
+       "      <td>data/Summaries/business/002.txt</td>\n",
        "      <td>002.txt</td>\n",
        "      <td>business</td>\n",
        "      <td>Summaries</td>\n",
@@ -107,7 +98,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2226</th>\n",
-       "      <td>data/BBC News Summary/Summaries/business/003.txt</td>\n",
+       "      <td>data/Summaries/business/003.txt</td>\n",
        "      <td>003.txt</td>\n",
        "      <td>business</td>\n",
        "      <td>Summaries</td>\n",
@@ -115,7 +106,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2227</th>\n",
-       "      <td>data/BBC News Summary/Summaries/business/004.txt</td>\n",
+       "      <td>data/Summaries/business/004.txt</td>\n",
        "      <td>004.txt</td>\n",
        "      <td>business</td>\n",
        "      <td>Summaries</td>\n",
@@ -123,7 +114,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2228</th>\n",
-       "      <td>data/BBC News Summary/Summaries/business/005.txt</td>\n",
+       "      <td>data/Summaries/business/005.txt</td>\n",
        "      <td>005.txt</td>\n",
        "      <td>business</td>\n",
        "      <td>Summaries</td>\n",
@@ -134,22 +125,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                  path filename  category  \\\n",
-       "2224  data/BBC News Summary/Summaries/business/001.txt  001.txt  business   \n",
-       "2225  data/BBC News Summary/Summaries/business/002.txt  002.txt  business   \n",
-       "2226  data/BBC News Summary/Summaries/business/003.txt  003.txt  business   \n",
-       "2227  data/BBC News Summary/Summaries/business/004.txt  004.txt  business   \n",
-       "2228  data/BBC News Summary/Summaries/business/005.txt  005.txt  business   \n",
+       "                                 path filename  category article_or_summary  \\\n",
+       "2224  data/Summaries/business/001.txt  001.txt  business          Summaries   \n",
+       "2225  data/Summaries/business/002.txt  002.txt  business          Summaries   \n",
+       "2226  data/Summaries/business/003.txt  003.txt  business          Summaries   \n",
+       "2227  data/Summaries/business/004.txt  004.txt  business          Summaries   \n",
+       "2228  data/Summaries/business/005.txt  005.txt  business          Summaries   \n",
        "\n",
-       "     article_or_summary                                            content  \n",
-       "2224          Summaries  TimeWarner said fourth quarter sales rose 2% t...  \n",
-       "2225          Summaries  The dollar has hit its highest level against t...  \n",
-       "2226          Summaries  Yukos' owner Menatep Group says it will ask Ro...  \n",
-       "2227          Summaries  Rod Eddington, BA's chief executive, said the ...  \n",
-       "2228          Summaries  Pernod has reduced the debt it took on to fund...  "
+       "                                                content  \n",
+       "2224  TimeWarner said fourth quarter sales rose 2% t...  \n",
+       "2225  The dollar has hit its highest level against t...  \n",
+       "2226  Yukos' owner Menatep Group says it will ask Ro...  \n",
+       "2227  Rod Eddington, BA's chief executive, said the ...  \n",
+       "2228  Pernod has reduced the debt it took on to fund...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +227,7 @@
        "2228  business  Pernod has reduced the debt it took on to fund..."
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -256,15 +247,15 @@
      "text": [
       "               precision    recall  f1-score   support\n",
       "\n",
-      "     business       0.99      0.98      0.98       222\n",
-      "entertainment       0.99      0.89      0.94       152\n",
-      "     politics       0.93      0.99      0.96       162\n",
-      "        sport       0.98      0.99      0.98       197\n",
-      "         tech       0.96      0.97      0.97       157\n",
+      "     business       0.97      0.92      0.95       115\n",
+      "entertainment       0.98      0.79      0.88        72\n",
+      "     politics       0.88      0.97      0.93        76\n",
+      "        sport       0.90      0.99      0.94       102\n",
+      "         tech       0.94      0.96      0.95        80\n",
       "\n",
-      "     accuracy                           0.97       890\n",
-      "    macro avg       0.97      0.97      0.97       890\n",
-      " weighted avg       0.97      0.97      0.97       890\n",
+      "     accuracy                           0.93       445\n",
+      "    macro avg       0.94      0.93      0.93       445\n",
+      " weighted avg       0.94      0.93      0.93       445\n",
       "\n"
      ]
     }
@@ -292,6 +283,130 @@
     "\n",
     "# Evaluar el rendimiento del modelo\n",
     "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PRUEBA CON LOS RESÚMENES GENERADOR POR HUGGINGFACE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>summary_HF</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>001.txt</td>\n",
+       "      <td>Time Warner profits up 76% to $1.13bn for the ...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>002.txt</td>\n",
+       "      <td>Dollar hits highest level against the euro in ...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>003.txt</td>\n",
+       "      <td>Yukos' owner Menatep Group says it will ask Ro...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>004.txt</td>\n",
+       "      <td>British Airways blames high fuel prices for a ...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>005.txt</td>\n",
+       "      <td>Allied Domecq shares in London rose 4% by 1200...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  filename                                         summary_HF  category\n",
+       "0  001.txt  Time Warner profits up 76% to $1.13bn for the ...  business\n",
+       "1  002.txt  Dollar hits highest level against the euro in ...  business\n",
+       "2  003.txt  Yukos' owner Menatep Group says it will ask Ro...  business\n",
+       "3  004.txt  British Airways blames high fuel prices for a ...  business\n",
+       "4  005.txt  Allied Domecq shares in London rose 4% by 1200...  business"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HF_Resumenes = pd.read_csv(\"ResumenesGeneradosHF.csv\")\n",
+    "HF_Resumenes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "     business       1.00      0.93      0.97        15\n",
+      "entertainment       1.00      0.93      0.97        15\n",
+      "     politics       0.83      1.00      0.91        15\n",
+      "        sport       1.00      1.00      1.00        15\n",
+      "         tech       1.00      0.88      0.93         8\n",
+      "\n",
+      "     accuracy                           0.96        68\n",
+      "    macro avg       0.97      0.95      0.95        68\n",
+      " weighted avg       0.96      0.96      0.96        68\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_generados_HF = HF_Resumenes['summary_HF']\n",
+    "X__HF_vectorized = vectorizer.transform(x_generados_HF)\n",
+    "y_HF = HF_Resumenes['category']\n",
+    "y_pred_HF = classifier.predict(X__HF_vectorized)\n",
+    "print(classification_report(y_HF, y_pred_HF))"
    ]
   },
   {
