Added News Search and Scratch img classifier

--- a/TEXTO/Texto-EDA.ipynb
+++ b/TEXTO/Texto-EDA.ipynb
@@ -17,7 +17,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\javie\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\david\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
@@ -165,7 +165,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4444</th>\n",
+       "      <th>4443</th>\n",
        "      <td>data/Summaries/tech/397.txt</td>\n",
        "      <td>397.txt</td>\n",
        "      <td>tech</td>\n",
@@ -173,7 +173,7 @@
        "      <td>BT is introducing two initiatives to help beat...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4445</th>\n",
+       "      <th>4444</th>\n",
        "      <td>data/Summaries/tech/398.txt</td>\n",
        "      <td>398.txt</td>\n",
        "      <td>tech</td>\n",
@@ -181,7 +181,7 @@
        "      <td>A third of them read unsolicited junk e mail a...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4446</th>\n",
+       "      <th>4445</th>\n",
        "      <td>data/Summaries/tech/399.txt</td>\n",
        "      <td>399.txt</td>\n",
        "      <td>tech</td>\n",
@@ -189,7 +189,7 @@
        "      <td>This goes to the heart of the European project...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4447</th>\n",
+       "      <th>4446</th>\n",
        "      <td>data/Summaries/tech/400.txt</td>\n",
        "      <td>400.txt</td>\n",
        "      <td>tech</td>\n",
@@ -197,7 +197,7 @@
        "      <td>Amit Yoran was director of the National Cyber ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4448</th>\n",
+       "      <th>4447</th>\n",
        "      <td>data/Summaries/tech/401.txt</td>\n",
        "      <td>401.txt</td>\n",
        "      <td>tech</td>\n",
@@ -206,7 +206,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4449 rows × 5 columns</p>\n",
+       "<p>4448 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -217,11 +217,11 @@
        "3     data/News Articles/business/004.txt  004.txt  business   \n",
        "4     data/News Articles/business/005.txt  005.txt  business   \n",
        "...                                   ...      ...       ...   \n",
-       "4444          data/Summaries/tech/397.txt  397.txt      tech   \n",
-       "4445          data/Summaries/tech/398.txt  398.txt      tech   \n",
-       "4446          data/Summaries/tech/399.txt  399.txt      tech   \n",
-       "4447          data/Summaries/tech/400.txt  400.txt      tech   \n",
-       "4448          data/Summaries/tech/401.txt  401.txt      tech   \n",
+       "4443          data/Summaries/tech/397.txt  397.txt      tech   \n",
+       "4444          data/Summaries/tech/398.txt  398.txt      tech   \n",
+       "4445          data/Summaries/tech/399.txt  399.txt      tech   \n",
+       "4446          data/Summaries/tech/400.txt  400.txt      tech   \n",
+       "4447          data/Summaries/tech/401.txt  401.txt      tech   \n",
        "\n",
        "     article_or_summary                                            content  \n",
        "0         News Articles  Ad sales boost Time Warner profit  Quarterly p...  \n",
@@ -230,13 +230,13 @@
        "3         News Articles  High fuel prices hit BA s profits  British Air...  \n",
        "4         News Articles  Pernod takeover talk lifts Domecq  Shares in U...  \n",
        "...                 ...                                                ...  \n",
-       "4444          Summaries  BT is introducing two initiatives to help beat...  \n",
-       "4445          Summaries  A third of them read unsolicited junk e mail a...  \n",
-       "4446          Summaries  This goes to the heart of the European project...  \n",
-       "4447          Summaries  Amit Yoran was director of the National Cyber ...  \n",
-       "4448          Summaries  He says that in the world of online gaming suc...  \n",
+       "4443          Summaries  BT is introducing two initiatives to help beat...  \n",
+       "4444          Summaries  A third of them read unsolicited junk e mail a...  \n",
+       "4445          Summaries  This goes to the heart of the European project...  \n",
+       "4446          Summaries  Amit Yoran was director of the National Cyber ...  \n",
+       "4447          Summaries  He says that in the world of online gaming suc...  \n",
        "\n",
-       "[4449 rows x 5 columns]"
+       "[4448 rows x 5 columns]"
       ]
      },
      "execution_count": 3,
@@ -277,6 +277,15 @@
     "plt.xticks(rotation=45, ha='right')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('news_df.csv')"
    ]
   },
   {
